[package]
name = "image-exif-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
vivs-content-macros = { path = "../vivs-content-macros" }
actix-web = "4.0"
actix-files = "0.6.2" # For serving files
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145" }
anyhow = "1.0"
futures = "0.3"
url-escape = "0.1.1"  # For URL encoding
chrono = "0.4.42"
glob = "0.3.3"
async-trait = "0.1.89"
homedir = "0.3.5"
crossbeam-channel = "0.5.15"
tokio = "1.47.1"
image = "0.25.8"
nameof = "1.3.0"
convert_case = "0.8.0"
kamadak-exif = "0.6.1"
regex = "1.11.2"
tempfile = "3.22.0"
factorial = "0.4.0"
url = "2.5.7"
serde_urlencoded = "0.7.1"
bytes = "1.10.1"
base64 = "0.22.1"
